Add requirements to group station based on location
